added missing changes in exilesoft.mytime/Views

--- a/Exilesoft.MyTime/Views/Analysis/TimeTrendAnalysis.cshtml
+++ b/Exilesoft.MyTime/Views/Analysis/TimeTrendAnalysis.cshtml
@@ -255,6 +255,10 @@
                                         <td style="width: 100px;">Work Coverage</td>
                                         <td>:<strong> <span id="SPAN_ReportSummery_Workcoverage"></span></strong></td>
                                     </tr>
+                                    <tr id="TR_WFH_Percentage">
+                                        <td style="width: 100px;">WFH Percentage</td>
+                                        <td>:<strong> <span id="SPAN_ReportSummery_WFHPercentage"></span></strong></td>
+                                    </tr>
                                     <tr>
                                         <td style="width: 100px;">Average In Time</td>
                                         <td>: <span id="SPAN_ReportSummery_AverageIn"></span></td>
